--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
  
 <body>
-  <a href="#" class="myButton">use bit.ly/wishflixofficiel</a>
+  <a href="#" class="myButton">use wishflix.fr</a>
 </body>
 </html>
