--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<html>
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>WishFlixOLD</title>
-    <link rel="stylesheet" href="style.css"/>
-  <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js" integrity="sha384-3LK/3kTpDE/Pkp8gTNp2gR/2gOiwQ6QaO7Td0zV76UFJVhqLl4Vl3KL1We6q6wR9" crossorigin="anonymous"></script>
-  
-</head>
- 
-<body>
-  <a href="#" class="myButton">use bit.ly/wishflixofficiel</a>
-</body>
-</html>
+<h1>NIGHTFLIX.INFO</h1>
